# practice_nastavnik

./: .gitignore  pyproject.toml
data/: mypath.py
src/: func.py
