[tool.poetry]
name = "practika-nastavnik"
version = "0.1.0"
description = ""
authors = ["Aleksey Bronnikov <lesha.bronnikov.99@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
isort = "^6.0.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
